chore(7-week): refactor grpc auth module; update loki configs
